# vscode-python-template

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: README.md  ai-behavior.md  interface-design.md  logging-standards.md  testing-standards.md  web-development.md
.launch_templates/: launch.example.json
.minikube/: setup-minikube.sh
helm/: Chart.yaml  values.yaml
helm/configs/minikube/: values.test.yaml
helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
src/vscode_python_template/: __init__.py
